Update and use coverage target

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -21,3 +21,8 @@ add_custom_target(
     COMMAND ${gdb_path} a.out
     DEPENDS a.out
 )
+
+include(CodeCoverage)
+
+# make cover
+setup_target_for_coverage(cover a.out html)
