--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,10 +2,13 @@ file(GLOB srcs "*.h" "*.cc")
 
 # a.out
 add_executable(a.out ${srcs})
-
 target_compile_options(a.out PRIVATE --std=c++11)
 target_include_directories(a.out PRIVATE ${gtest_SOURCE_DIR}/include)
 target_link_libraries(a.out glucosamine gtest)
 
 # make test
-add_custom_target(test COMMAND a.out DEPENDS a.out)
+add_custom_target(
+    test
+    COMMAND a.out
+    DEPENDS a.out
+)
