Reorganize cmake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,18 +4,18 @@ project(glucosamine)
 
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
-# Glucosamine
-file(GLOB srcs "src/*/*.h" "src/core/Solver.cc")
+set(glucosamine_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/src)
 
 # libglucosamine.a
+file(GLOB_RECURSE srcs "src/*.h" "src/core/Solver.cc")
 add_library(glucosamine STATIC ${srcs})
 target_compile_options(glucosamine PRIVATE --std=c++11)
-target_include_directories(glucosamine PUBLIC ${PROJECT_SOURCE_DIR}/src)
+target_include_directories(glucosamine PUBLIC ${glucosamine_INCLUDE_DIRS})
 
 # Unit tests
 if(${CMAKE_PROJECT_NAME} STREQUAL ${PROJECT_NAME})
     # Google Test
-    add_subdirectory(${PROJECT_SOURCE_DIR}/third_party/googletest)
+    add_subdirectory(third_party/googletest)
     # Unit tests
-    add_subdirectory(${PROJECT_SOURCE_DIR}/test)
+    add_subdirectory(test)
 endif()
