Simplify compilation config

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,23 +1,15 @@
 include(CodeCoverage) # setup_target_for_coverage
 
-find_program(gdb_path gdb)
-
 # a.out
 file(GLOB srcs "*.h" "*.cc")
 add_executable(a.out ${srcs})
+target_compile_options(a.out PRIVATE -std=c++11 -Wall)
 target_link_libraries(a.out glucosamine gtest)
 
 # make test
 add_custom_target(
     test
     COMMAND a.out
-    DEPENDS a.out
-)
-
-# make debug
-add_custom_target(
-    debug
-    COMMAND ${gdb_path} a.out
     DEPENDS a.out
 )
 
