Add benchmark 101 from agile suite

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,9 +1,10 @@
 include(CodeCoverage) # setup_target_for_coverage
 
 # a.out
-file(GLOB srcs "*.h" "*.cc")
+file(GLOB srcs "*.h" "*.cc" "agile/*.cc")
 add_executable(a.out ${srcs})
 target_compile_options(a.out PRIVATE -std=c++11 -Wall)
+target_include_directories(a.out PRIVATE .)
 target_link_libraries(a.out glucosamine gtest)
 
 # make test
