Change test to do_test
Later versions of CMake reserve the usage of 'make test'

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,7 +9,7 @@ target_link_libraries(a.out glucosamine gtest)
 
 # make test
 add_custom_target(
-    test
+    do_test
     COMMAND a.out
     DEPENDS a.out
 )
