Change compile flags to public

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 # libglucosamine.a
 file(GLOB_RECURSE srcs "src/*.h" "src/core/Solver.cc")
 add_library(glucosamine STATIC ${srcs})
-target_compile_options(glucosamine PRIVATE -std=c++11 -Wall)
+target_compile_options(glucosamine PUBLIC -std=c++11 -Wall)
 target_include_directories(glucosamine PUBLIC ${PROJECT_SOURCE_DIR}/src)
 
 # Unit tests
